--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>Meu Sistema</h1>
     <button id="btnAdicionar" type="button" class="btn btn-primary">Adicionar</button>
+    <button id="btnMaisUmBotao" type="button" class="btn btn-warning">Mais um Botão</button>
 
     <br />
     <br />
